Fixed bug #31190 (iexceptions in call_user_func_array())